[tool.poetry]
name = "course-drf"
version = "0.1.0"
description = ""
authors = ["Skillova <skillova@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
django = "4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
